test/e2e/fail_compile/type_errors/decl_runtime_use.cst
runtime fn probe() -> runtime Constraint {
    decl(1)
}

fn main() {}
